# AWS_File_Manager

./: .env_example  .gitignore  Dockerfile  README.md  alembic.ini  aws_file_manager.db  check_service.py  iam_policy.example.json  pyproject.toml  requirements.txt
alembic/: README  env.py
app/: main.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: __init__.py  base.py  session.py
app/file_manager/: __init__.py  exceptions.py  models.py  routes.py  schemas.py  service.py
app/infrastructure/: __init__.py  redis_client.py  s3_client.py
backend/: .env  requirements.txt
backend/project/: settings.py
frontend/: package-lock.json
src/: __init__.py  main.py
src/api/: media_routes.py
src/application/: media_service.py
src/core/: config.py
src/domain/: __init__.py  exceptions.py  schemas.py
src/infrastructure/: __init__.py  s3_client.py
