[tool.poetry]
name = "aws-file-manager"
version = "0.1.0"
description = "FastAPI microservice for managing files with AWS S3"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.1"
uvicorn = { extras = ["standard"], version = "^0.42.0" }
pydantic = "^2.12.2"
pydantic-settings = "^2.11.0"
boto3 = "^1.42.72"
python-multipart = "^0.0.22"
PyJWT = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
